--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ body{
     margin: 10px 0 20px;
     border-radius: 5px;
 }
+#error{
+    display: none;
+    color: red;
+}
 .container button{
     width: 100%;
     height: 50px;
@@ -43,4 +47,20 @@ body{
     cursor: pointer;
     margin: 20px 0;
     font-weight: 500;
+}
+#imgBox{
+    display: none;
+    width: 200px;
+    border-radius: 5px;
+    overflow: hidden;
+    margin: auto;
+}
+#imgBox img{
+    width: 100%;
+    padding: 10px;
+}
+#imgBox.show-img{
+    max-height: 300px;
+    margin: 10px auto;
+    border: 1px solid #d1d1d1;
 }
